test/error/ConstructorNameMismatch.ci
public class Test
{
	public Tester() { //ERROR: Constructor name doesn't match class name
	}
}
